# Project-47

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  brute_force_proof.rs
.github/workflows/: rust.yml
pr47/: Cargo.toml
pr47-codegen/: Cargo.toml
pr47-codegen-lite/: Cargo.toml
pr47-codegen-lite/src/: lib.rs
pr47-codegen/src/: attrs.rs  lib.rs  types.rs
pr47-core/: Cargo.toml  LICENSE  build.rs
pr47-core/benches/: bench_al31fm2.rs
pr47-core/raw_benches/: bench_al31fm2.rs  bench_al31fm2_sync.rs
pr47-core/src/: data.rs  lib.rs
pr47-core/src/builtins/: closure.rs  error.rs  mod.rs  object.rs  test_container.rs  vec.rs
pr47-core/src/collections/: mod.rs  object.rs  test_container.rs  vec.rs
pr47-core/src/data/: container.rs  custom_vt.rs  exception.rs  generic.rs  mod.rs  test.rs  traits.rs  tyck.rs  value.rs  value_typed.rs  wrapper.rs
pr47-core/src/diag/: diag_data.rs  location.rs  mod.rs  source.rs
pr47-core/src/ds/: mod.rs  object.rs  test_container.rs  vec.rs
pr47-core/src/ffi/: async_fn.rs  mod.rs  sync_fn.rs
pr47-core/src/parse/: lexer.rs  mod.rs  parser.rs  syntax_action.rs
pr47-core/src/parse/parser/: attr.rs  base.rs  decl.rs  expr.rs  stmt.rs  top_level.rs  ty.rs
pr47-core/src/sema/: arena.rs  decl.rs  decl_context.rs  dyn_cast.rs  expr.rs  mod.rs  phase2.rs  scope.rs  visitor.rs
pr47-core/src/std47/: error.rs  fs.rs  futures.rs  io.rs  math.rs  mod.rs  str.rs  time.rs
pr47-core/src/syntax/: action.rs  attr.rs  decl.rs  expr.rs  id.rs  mod.rs  stmt.rs  token.rs  ty.rs  visitor.rs
pr47-core/src/util/: async_utils.rs  defer.rs  diag.rs  either.rs  location.rs  makro.rs  mem.rs  mod.rs  mstring.rs  serializer.rs  source_map.rs  std_ext.rs  type_assert.rs  unchecked_cell.rs  unchecked_option.rs  unsafe_from.rs  zvec.rs
pr47-core/src/util/append/: mod.rs
pr47-core/src/util/diag/: messages.rs  pretty.rs
pr47-core/src/vm/: insc.rs  mod.rs  test.rs  test_program.rs
pr47-core/src/vm/al31f/: alloc.rs  compiled.rs  exception.rs  executor.rs  insc.rs  mod.rs  stack.rs  test.rs  test_async.rs  test_program.rs  test_sync.rs
pr47-core/src/vm/al31f/alloc/: default_alloc.rs  no_gc_alloc.rs
pr47-core/src/vm/al31f/analysis/: anf.rs  mod.rs
pr47-core/src/vm/al31f/executor/: async_executor.rs  checked_bin_ops.rs  checked_cast_ops.rs  checked_ops.rs  checked_unary_ops.rs  coroutine_spawn.rs  get_vm_makro.rs  impl_makro.rs  mod.rs  overload.rs  rtti.rs  sync_executor.rs  unwinding.rs
pr47-core/src/vm/al31fm2/: alloc.rs  compiled.rs  exception.rs  insc.rs  mod.rs  stack.rs  test_async.rs  test_program.rs  test_sync.rs
pr47-core/src/vm/al31fm2/alloc/: default_alloc.rs  no_gc_alloc.rs
pr47-core/src/vm/al31fm2/executor/: async_executor.rs  checked_bin_ops.rs  checked_cast_ops.rs  coroutine_spawn.rs  impl_makro.rs  mod.rs  overload.rs  rtti.rs  sync_executor.rs  unwinding.rs
pr47-core/src/vm/al31fu/: combustor.rs  exports.rs  imports.rs  mod.rs
pr47-core/src/vm/al31fu/cxx/: CMakeLists.txt
pr47-core/src/vm/al31fu/cxx/include/: aligned_alloc.h  exports.h  imports.h  insc.h  stack.h
pr47-core/src/vm/al31fu/cxx/src/: insc.cc  pseudo.cc
pr47/src/: lib.rs
pr47_data/: Cargo.toml
pr47_data/src/: lib.rs
pr47_macros/: Cargo.toml
pr47_macros/src/: lib.rs
sample/: httpd.pr47  simple.p47
