[package]
name = "pr47"
version = "0.1.2"
authors = ["ICEY <icey@icey.tech>"]
edition = "2018"
description = "A semi-experimental programming language. Still working in progress."
readme = "../README.md"
repository = "https://github.com/Pr47/Pr47"
license = "MIT"

[dependencies]
pollster = "0.2"
pr47-codegen = "0.0.2"
unchecked_unwrap = "3"
xjbutil = { version = "0.4", default-features = false, features = [
    "async",
    "defer",
    "either",
    "korobka",
    "makro",
    "mem",
    "std-ext",
    "unchecked",
    "wide_ptr",
    "void"
] }

async-std = { optional = true, version = "1" }
futures = { optional = true, version = "0.3" }
phf = { optional = true, version = "0.10", features = ["macros"] }
smallvec = { optional = true, version = "1" }
tokio = { optional = true, version = "1", features = ["rt", "sync", "time"] }
unicode-width = { optional = true, version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
variant_count = "1"

[features]
default = ["async-tokio", "compiler", "compiler-pretty-diag", "optimized-rtlc", "std47"]

async = ["futures"]
async-astd = ["async", "async-std", "xjbutil/async-astd"]
async-tokio = ["async", "tokio", "xjbutil/async-tokio"]
bench = []
compiler = ["phf", "smallvec"]
compiler-pretty-diag = ["unicode-width"]
huge-align = []
no-rtlc = []
optimized-rtlc = []
std47 = []


# Compiler testing binaries
[[bin]]
name = "token47"
path = "bin/token47.rs"
required-features = ["compiler", "compiler-pretty-diag"]

# Benchmarking
[[bin]]
name = "bench_al31fm2_sync"
path = "raw_benches/bench_al31fm2_sync.rs"
required-features = ["bench"]

[[bin]]
name = "bench_al31fm2"
path = "raw_benches/bench_al31fm2.rs"
required-features = ["bench", "async"]
