[package]
name = "pr47"
version = "0.1.3"
authors = ["ICEY <icey@icey.tech>"]
edition = "2018"
description = "A semi-experimental programming language. Still working in progress."
readme = "../README.md"
repository = "https://github.com/Pr47/Pr47"
license = "MIT"

[dependencies]
pollster = "0.2"
pr47-codegen = "0.0.2"
smallvec = "1"
unchecked_unwrap = "3"
xjbutil = { version = "0.7.0-DELTA", default-features = false, features = [
    "async",
    "defer",
    "display2",
    "either",
    "flexible-array",
    "korobka",
    "makro",
    "mem",
    "slice-arena",
    "std-ext",
    "unchecked",
    "wide_ptr",
    "void"
] }

async-std = { optional = true, version = "1" }
futures = { optional = true, version = "0.3", default-features = false }
log = { optional = true, version = "0.4" }
phf = { optional = true, version = "0.10", features = ["macros"] }
tokio = { optional = true, version = "1", features = ["rt", "sync", "time"] }
tracing = { optional = true, version = "0.1.29" }
unicode-width = { optional = true, version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
variant_count = "1"

[features]
default = [
    "al31f",
    "al31f-builtin-ops",
    "async-avoid-block",
    "async-tokio",
    "compiler",
    "compiler-pretty-diag",
    "optimized-rtlc",
    "std47"
]

al31f = []
al31f-builtin-ops = []
async = ["futures"]
async-astd = ["async", "async-std", "xjbutil/async-astd"]
async-avoid-block = []
async-tokio = ["async", "tokio", "xjbutil/async-tokio"]
bench = []
compiler = ["phf"]
compiler-pretty-diag = ["unicode-width"]
d30f6 = []
huge-align = []
no-rtlc = []
optimized-rtlc = []
std47 = []
with-log = ["log"]
with-tracing = ["tracing"]

# Compiler testing binaries
[[bin]]
name = "token47"
path = "bin/token47.rs"
required-features = ["compiler", "compiler-pretty-diag"]

# Benchmarking
[[bin]]
name = "bench_al31fm2_sync"
path = "raw_benches/bench_al31fm2_sync.rs"
required-features = ["bench"]

[[bin]]
name = "bench_al31fm2"
path = "raw_benches/bench_al31fm2.rs"
required-features = ["bench", "async"]
