[package]
name = "pr47"
version = "0.1.0"
authors = ["ICEY <icey@icey.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pr47_macros = { path = "../pr47_macros" }
pr47_data = { path = "../pr47_data" }
lazy_static = "1.4.0"
paste = "1.0"
memoffset = "0.5"